More fixes
Fix horizontal scroll, fix mobile menu stop

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -22,11 +22,11 @@ html[xmlns] .flexslider .slides{display:block;}
 .loading .flex-viewport{max-height:300px;}
 .carousel li{margin-right:5px;}
 .flex-direction-nav{*height:0;}
-.flex-direction-nav a{text-decoration:none;display:block;width:40px;height:40px;margin:-20px 0 0;position:absolute;top:50%;z-index:10;overflow:hidden;opacity:0;cursor:pointer;color:rgba(0, 0, 0, 0.8);text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);}
-.flex-direction-nav a:before{font-family:"flexslider-icon";font-size:40px;display:none;content:none;color:rgba(0, 0, 0, 0.8);text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);background:url('../img/right.png') no-repeat center center;background-size:cover;}
+.flex-direction-nav a{text-decoration:none;display:block;position:absolute;width:40px;height:40px;top:50%;z-index:10;overflow:hidden;opacity:0;cursor:pointer;color:rgba(0, 0, 0, 0.8);}
+.flex-direction-nav a:before{font-family:"flexslider-icon";font-size:20px;display:none;content:none;color:rgba(0, 0, 0, 0.8);text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);background:url('../img/right.png') no-repeat center center;background-size:cover;}
 .flex-direction-nav a.flex-next:before{content:none;}
-.flex-direction-nav .flex-prev{left:-50px;text-indent:100%;white-space:nowrap;overflow:hidden;background:url('../img/left.png') no-repeat center center;background-size:cover;}
-.flex-direction-nav .flex-next{right:-50px;text-indent:100%;white-space:nowrap;overflow:hidden;background:url('../img/right.png') no-repeat center center;background-size:cover;}
+.flex-direction-nav .flex-prev{left:-5px;text-indent:100%;white-space:nowrap;overflow:hidden;background:url('../img/left.png') no-repeat center center;background-size:cover;}
+.flex-direction-nav .flex-next{right:-5px;text-indent:100%;white-space:nowrap;overflow:hidden;background:url('../img/right.png') no-repeat center center;background-size:cover;}
 .flexslider:hover .flex-direction-nav .flex-prev{opacity:0.7;left:10px;}
 .flexslider:hover .flex-direction-nav .flex-prev:hover{opacity:1;}
 .flexslider:hover .flex-direction-nav .flex-next{opacity:0.7;right:10px;}
