--- a/slicknav.css
+++ b/slicknav.css
@@ -7,7 +7,7 @@
 .slicknav_menu .slicknav_icon-bar{display:block;width:1.125em;height:0.125em;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:1px;-webkit-box-shadow:0 1px 0 rgba(0, 0, 0, 0.25);-moz-box-shadow:0 1px 0 rgba(0, 0, 0, 0.25);box-shadow:0 1px 0 rgba(0, 0, 0, 0.25);}
 .slicknav_menu:before{content:" ";display:table;}
 .slicknav_menu:after{content:" ";display:table;clear:both;}
-.slicknav_nav{clear:both; max-width: 800px;}
+.slicknav_nav{clear:both;}
 .slicknav_nav ul{display:block;}
 .slicknav_nav li{display:block;}
 .slicknav_nav .slicknav_arrow{font-size:0.8em;margin:0 0 0 0.4em;}
